--- a/app/src/main/res/layout/fragment_add_medications.xml
+++ b/app/src/main/res/layout/fragment_add_medications.xml
@@ -8,67 +8,92 @@
     android:padding="@dimen/fab_margin"
     tools:showIn="@layout/activity_add_medications">
 
-
-    <LinearLayout
-        android:id="@+id/layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_above="@+id/saveBtn"
-        android:gravity="center">
-
     <EditText
         android:id="@+id/problemET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="@string/problem"
+        android:maxLines="1"
         android:layout_marginBottom="@dimen/margin_button"
         android:ems="10" />
+
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/problemET"
+        android:gravity="center">
 
         <Button
             android:id="@+id/addDoctor"
             style="@style/ButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="120dp"
             android:layout_marginBottom="@dimen/margin_button"
             android:text="@string/add_a_doctor"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/doctorRV"
+            android:layout_width="match_parent"
+            android:layout_height="120dp">
+        </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutPresc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/layout"
+        android:gravity="center">
 
         <Button
             android:id="@+id/pBtn"
             style="@style/ButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="120dp"
             android:layout_marginBottom="@dimen/margin_button"
             android:text="@string/add_prescriptions"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/listPrescription"
+            android:layout_width="match_parent"
+            android:layout_height="120dp">
+        </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/layoutReport"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/layoutPresc"
+        android:gravity="center">
         <Button
             android:id="@+id/reportBtn"
             style="@style/ButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="120dp"
             android:layout_marginBottom="@dimen/margin_button"
             android:text="@string/add_lab_reports"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/listReports"
+            android:layout_width="match_parent"
+            android:layout_below="@+id/listPrescription"
+            android:layout_height="120dp">
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/listPrescription"
-        android:layout_width="match_parent"
-        android:layout_height="120dp">
-    </android.support.v7.widget.RecyclerView>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/listReports"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/listPrescription"
-        android:layout_height="120dp">
-    </android.support.v7.widget.RecyclerView>
+
 
     <Button
         android:text="Save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="42dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
         android:id="@+id/saveBtn" />
 </RelativeLayout>
