committing changes required in the review

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="@dimen/sign_margin_bottom"
+        android:contentDescription="@string/sign_in_google"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
