--- a/app/src/main/res/layout/activity_home_item_layout.xml
+++ b/app/src/main/res/layout/activity_home_item_layout.xml
@@ -22,7 +22,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:text="Fever"
+            android:text="@string/fever"
             android:paddingLeft="5dp"
             android:fontFamily="sans-serif-medium"
             android:textSize="20sp"
