--- a/app/src/main/res/layout/doctor_item.xml
+++ b/app/src/main/res/layout/doctor_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="5dp"
     android:layout_width="wrap_content"
@@ -12,7 +13,7 @@
         app:srcCompat="@drawable/ic_person"/>
 
     <TextView
-        android:text="Dr Steven"
+        tools:text="Dr Stevens"
         android:fontFamily="sans-serif-medium"
         android:textSize="18sp"
         android:ellipsize="end"
