committing changes required in the third review

--- a/app/src/main/res/layout/appwidget_layout.xml
+++ b/app/src/main/res/layout/appwidget_layout.xml
@@ -9,7 +9,7 @@
 <LinearLayout
     android:id="@+id/layout"
     android:layout_width="wrap_content"
-    android:layout_height="160dp"
+    android:layout_height="@dimen/widger_height"
     android:padding="@dimen/widget_margin"
     android:orientation="horizontal">
 
