--- a/app/src/main/res/layout/doctor_item.xml
+++ b/app/src/main/res/layout/doctor_item.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:padding="5dp"
+    android:padding="@dimen/margin_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/doctor_image_height"
+        android:layout_height="@dimen/doctor_image_height"
         app:srcCompat="@drawable/ic_person"/>
 
     <TextView
