--- a/app/src/main/res/layout/activity_home_item_layout.xml
+++ b/app/src/main/res/layout/activity_home_item_layout.xml
@@ -6,14 +6,14 @@
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:id="@+id/card_view"
-    android:layout_margin="5dp"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardElevation="5dp">
+    android:layout_margin="@dimen/margin_button"
+    card_view:cardCornerRadius="@dimen/card_radius"
+    card_view:cardElevation="@dimen/margin_button">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
+        android:padding="@dimen/margin_button"
         android:orientation="vertical">
 
     <LinearLayout
@@ -23,7 +23,7 @@
 
         <TextView
             android:text="@string/fever"
-            android:paddingLeft="5dp"
+            android:paddingLeft="@dimen/margin_button"
             android:fontFamily="sans-serif-medium"
             android:textSize="20sp"
             android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/listDoctor"
             android:layout_width="match_parent"
-            android:layout_height="120dp">
+            android:layout_height="@dimen/recycler_height">
         </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
