--- a/app/src/main/res/layout/fragment_add_medications.xml
+++ b/app/src/main/res/layout/fragment_add_medications.xml
@@ -29,7 +29,7 @@
         <Button
             android:id="@+id/addDoctor"
             style="@style/ButtonStyle"
-            android:layout_width="110dp"
+            android:layout_width="@dimen/doctor_button_width"
             android:layout_height="@dimen/button_height"
             android:layout_marginBottom="@dimen/margin_button"
             android:contentDescription="@string/add_a_doctor"
@@ -54,8 +54,8 @@
         <Button
             android:id="@+id/pBtn"
             style="@style/ButtonStyle"
-            android:layout_width="110dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/doctor_button_width"
+            android:layout_height="@dimen/button_height"
             android:layout_marginBottom="@dimen/margin_button"
             android:contentDescription="@string/add_prescriptions"
             android:text="@string/add_prescriptions"/>
@@ -76,8 +76,8 @@
         <Button
             android:id="@+id/reportBtn"
             style="@style/ButtonStyle"
-            android:layout_width="110dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/doctor_button_width"
+            android:layout_height="@dimen/button_height"
             android:layout_marginBottom="@dimen/margin_button"
             android:contentDescription="@string/add_lab_reports"
             android:text="@string/add_lab_reports"/>
