committing changes required in the review

--- a/app/src/main/res/layout/activity_home_item_layout.xml
+++ b/app/src/main/res/layout/activity_home_item_layout.xml
@@ -38,7 +38,7 @@
             android:layout_centerHorizontal="true"
             android:gravity="right"
             android:clickable="true"
-            android:text="View More"
+            android:text="@string/view_more"
             android:fontFamily="sans-serif-condensed"
             android:textColor="@color/cardview_dark_background"
             android:textSize="18sp"
